--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ footer .buttonLeft {
     left: -12vh;
     font-size: 8vh;
     margin-top: 8vh;
-    color: #888;
+    color: rgba(255, 255, 255, 0.5);
     opacity: 0;
     cursor: pointer;
 }
@@ -221,14 +221,14 @@ footer .buttonRight {
     font-size: 8vh;
     right: -12vh;
     margin-top: 8vh;
-    color: #888;
+    color: rgba(255, 255, 255, 0.5);
     opacity: 0;
     cursor: pointer;
 }
 
 footer .buttonLeft:hover,
 footer .buttonRight:hover {
-    color: rgb(248, 252, 248);
+    color: rgba(255, 255, 255, 0.9);
 }
 
 footer:hover .buttonLeft,
