--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ img {
     margin-top: 2vh;
     font-size: 3vh;
     height: 4vh;
-    color: aquamarine;
+    color: rgb(8, 243, 8);
     cursor: pointer;
     position: relative;
 }
@@ -214,7 +214,6 @@ img {
     height: 3vh;
     border-radius: 50%;
     margin-bottom: 1vh;
-    background: rgb(17, 236, 17);
 }
 .right .lyric .selectorColor .aquamarine{
     background: aquamarine;
