--- a/css/style.css
+++ b/css/style.css
@@ -125,9 +125,12 @@ img {
 }
 
 .right h1 {
-    font-size: 6vh;
+    font-size: 4vh;
     padding: 12px 0;
     cursor:default;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     overflow: hidden;
 }
 
@@ -191,14 +194,19 @@ img {
 }
 
 .right .name {
+    width: 40%;
     margin-top: 4vh;
+    margin-bottom: 4vh;
     font-size: 3vh;
     font-family: KaiTi;
     cursor:default;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .right .lyric {
-    margin-top: 2vh;
+    margin-top: 4vh;
     font-size: 3vh;
     height: 4vh;
     color: #31c27c;
@@ -212,7 +220,12 @@ img {
     top: -4vh;
     left:40%;
 }
-
+.lyric p{
+    width: 100%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
 .right .lyric .selectorColor > li{
     float: left;
     margin-right:2vh;
